quality of life update (final update) fix if the session is empty just don't create its button fix the side bar buttons for al subjects add info button for the color codes of the questions fix the color of the top section on ios make the title of the website hide when scrolled on phone view

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -49,15 +49,22 @@
 .modal>.modal-buttons-container>button {
     cursor: pointer;
 
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 0.5rem;
-    border: solid 3pt #0D1117;
-    color: #0D1117;
+    border: none;
+    background-color: #0D1117;
 
     font-size: large;
     font-weight: bold;
 
     outline: none;
+    transition: background-color 100ms ease;
+}
+
+@media (pointer: fine) {
+    .modal>.modal-buttons-container>button:hover {
+        background-color: #21262D;
+    }
 }
 
 .modal input[type="checkbox"] {
